examples/type_system/failing/47_main_with_parameters.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/47_main_with_parameters.flx
// error[E411]: Invalid Main Signature
//
// `fn main` cannot take parameters.
//
//   examples/type_system/failing/47_main_with_parameters.flx:23:1
//    |
// 23 | fn main(x: Int) {
//    | ^^^^^^^^^^^^^^^
//    | --------------- `main` declared with parameters
//
// Hint:
//   Define `fn main()` with zero parameters.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E411

// E411: main cannot declare parameters.

fn main(x: Int) {
    x
}
